Command rework, reorganizing everything, an actual lang file, what is this, a real mod?

--- a/.editorconfig
+++ b/.editorconfig
@@ -19,6 +19,10 @@ indent_size = 4
 indent_style = space
 indent_size = 4
 
+[*.json5]
+indent_style = space
+indent_size = 4
+
 [*.toml]
 indent_style = space
 indent_size = 4
