--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -14,6 +14,7 @@ jobs:
           distribution: "temurin"
           java-version: "17"
       - uses: actions/checkout@v3
+      - run: chmod +x ./gradlew
       - name: Generate docs
         uses: gradle/gradle-build-action@v2
         with:
